Attempted bug fix - when typing in text box, upper part of chatbot cut off

--- a/src/style.css
+++ b/src/style.css
@@ -108,24 +108,24 @@ body.show-chatbot .chatbot {
 
 /* Where takes a selector list as its argument and selects any element that can be selected by one of the selectors.
   ::-webkit-scrollbar is a CSS pseudo-element that affects the style of an element's scrollbar when there is a scrollable overflow  */
-.chatbot :where(.chat-message-storage, textarea)::-webkit-scrollbar {
+.chatbot :where(.chat-message-storage)::-webkit-scrollbar {
   width: 18px;
 }
 
 /* The scrollbar's track */
- .chatbot :where(.chat-message-storage, textarea)::-webkit-scrollbar-track {
+ .chatbot :where(.chat-message-storage)::-webkit-scrollbar-track {
   background: #fff;
   border-radius: 55px;
 } 
 
 /* The scrollbar's thumb (the gray shaded part that rests on the track) */
-.chatbot :where(.chat-message-storage, textarea)::-webkit-scrollbar-thumb {
+.chatbot :where(.chat-message-storage)::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 25px;
 }
 
 /* Hover effect over the scrollbar thumb */
-.chatbot :where(.chat-message-storage, textarea)::-webkit-scrollbar-thumb:hover {
+.chatbot :where(.chat-message-storage)::-webkit-scrollbar-thumb:hover {
     background-color:#a0a0a5;
     border:4px solid #f4f4f4
 }
